# 5liu0-2021

./: .gitignore  Cargo.toml  openocd.cfg  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
matlab/: analyze_measurements.m  angle_to_lag.m  calc_angle.m  corr_samples.m  fft_channel.m  lag_to_angle.m  main.m  plot_corr.m  plot_fft.m  plot_fft_audio.m  read_samples.m  utils.m  xcorr_custom.m
project/: proposal.tex  references.bib  report.tex  tables.tex
project/assets/: problem_overview.drawio  setup.drawio
project/measurements/mosquito/: 0_deg.txt  135_deg.txt  180_deg.txt  45_deg.txt  90_deg.txt
project/measurements/sine_1100hz/: 0_deg.txt  135_deg.txt  180_deg.txt  45_deg.txt
prototype/calc/: Cargo.toml  samples
prototype/calc/src/: lib.rs
prototype/cli/: Cargo.toml
prototype/cli/.cargo/: config.toml
prototype/cli/python/: plot.py
prototype/cli/src/: cmd.rs  lib.rs  main.rs  python_wrappers.rs  serial.rs  store.rs
prototype/firmware/: Cargo.toml
prototype/firmware/src/: lib.rs  main.rs  mic_array.rs  pan_tilt.rs  uarte.rs
prototype/format/: Cargo.toml
prototype/format/src/: device_to_server.rs  server_to_device.rs
prototypes/pan-tilt/cli/: Cargo.toml
prototypes/pan-tilt/cli/src/: cmd.rs  main.rs  serial.rs
prototypes/pan-tilt/firmware/: Cargo.toml
prototypes/pan-tilt/firmware/src/: lib.rs  main.rs  pan_tilt.rs  uarte.rs
prototypes/pan-tilt/format/src/: lib.rs
python/: graphtest.py  plot.py  test.py
scripts/: defmt_log.sh  maturin.sh
