[package]
name = "folley-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = "0.2.6"
heapless = "0.7.8"
lis3dh = "0.4.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.7.0"
nb = "1.0.0"
pwm-pca9685 = "0.3.1"

folley-format = { path = "../format",  features = ["defmt"] }

[dependencies.cortex-m-rtic]
version = "0.5.9"
default-features = false
features = ["cortex-m-7"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
default-features = false

[dependencies.nrf52840-hal]
version = "0.14.0"
features = ["rt"]
