[package]
name = "folley-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt =  { version = "0.3.0", optional = true }
heapless = "0.7.8"
postcard = "0.7.0"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
default-features = false

[features]
defmt_impl = ["defmt"]
